  - more efficient searches...several anomalies fixed and search activity reports available
  - importing EQL database backup files now more descriptive if errors are encountered (detailed solution provided)
  - adds some new upgrade scripts to attempt to clean up the system from previous updates
    -- deletes moved files where old file in old location may still linger
    -- attempts to fix some database issues such as mixed case naming or controller name quirks.
  - new system fallback theme so pages will display even if the entire themes folder is missing
  - plus many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.8
-----------------------
# This release focuses on fixing bugs and enhancing list management (tags, categories, comments)
  - adds manual sorting to news module
  - adds random sorting to links module
  - enhances category management by removing global categories and grouping categories by module type
  - adds site-wide comment management to exponent menu
  - enhances comment, tag, & category management with bulk module item processing
  - adds additional views to photoalbum
    -- new tabbed and accordion views just like filedownloads & portfolio
    -- view category/gallery/group album to pull up individual group/gallery
  - adds group (category) viewing to filedownloads
  - adds quick upload feature to wysiwyg editor (upload in editor without going to file manager/uploader)
  - finally implements email alerts (ealerts) in a usable form for blog, news, & filedownloads (subscribe to updates)
  - adds support for custom smarty plugins & form controls (in current theme folder)
  - adds alpha-level implementation of less style sheets (both system and theme)
  - plus many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.7
-----------------------
# This release focuses on fixing bugs and enhanced speed/size
  - incorporates all fixes from v2.0.6 patches