@@ -179,6 +179,8 @@ class migrationController extends expController {
 					list($u, $s) = explode(' ',microtime());
 					$this->sef_name .= '-'.$s.'-'.$u;
 				}
+                $page->sef_url = $page->sef_name;
+                unset($page->sef_name);
 				$ret = $db->insertObject($page, 'section');
 				if (empty($ret)) {
 					$failed += 1;
@@ -205,6 +207,8 @@ class migrationController extends expController {
 					list($u, $s) = explode(' ',microtime());
 					$this->sef_name .= '-'.$s.'-'.$u;
 				}
+                $page->sef_url = $page->sef_name;
+                unset($page->sef_name);
 				$ret = $db->insertObject($page, 'section');
 				if (empty($ret)) {
 					$failed += 1;
