@@ -39,7 +39,7 @@ class section extends expRecord {
     }
 
     function update($params=array()) {
-        if (empty($params['sef_name'])) $params['sef_name'] = expCore::makeSefUrl($params['name'],'section');
+        if (empty($params['sef_url'])) $params['sef_url'] = expCore::makeSefUrl($params['name'],'section');
         parent::update($params);
         expSession::clearAllUsersSessionCache('navigation');
 //        expHistory::back();
