@@ -38,7 +38,7 @@
             <div class="yui-content">
                 <div id="tab1">
                     {control type=text name=name label="Name"|gettext value=$section->name}
-                    {control type=text name=sef_name label="SEF Name"|gettext value=$section->sef_name}
+                    {control type=text name=sef_url label="SEF Name"|gettext value=$section->sef_url}
                     <div class="control"><div class="control-desc">{'If you don\'t put in an SEF Name one will be generated based on the title provided. SEF names can only contain alpha-numeric characters, hyphens and underscores.'|gettext}</div></div>
                     {if $section->id == 0 || $section->parent == -1}
                         {control type=hidden name=parent value=$section->parent}
