@@ -616,7 +616,7 @@ class usersController extends expController {
         expHistory::set('editable', $this->params);
         $id = isset($this->params['id']) ? $this->params['id'] : null;
         $group = new group($id);
-        $group->redirect = $db->selectValue('section','id',"sef_name='".$group->redirect."'");
+        $group->redirect = $db->selectValue('section','id',"sef_url='".$group->redirect."'");
         assign_to_template(array(
             'record'=>$group
         ));
@@ -693,7 +693,7 @@ class usersController extends expController {
 
         $group = new group();
         if (!empty($this->params['redirect'])) {
-            $this->params['redirect'] = $db->selectValue('section','sef_name','id='.$this->params['redirect']);
+            $this->params['redirect'] = $db->selectValue('section','sef_url','id='.$this->params['redirect']);
         }
         $group->update($this->params);
         expHistory::back();
