@@ -27,7 +27,7 @@
 class upgrade_navigation extends upgradescript {
 	protected $from_version = '1.99.0';
 	protected $to_version = '2.0.9';
-    public $optional = true;
+//    public $optional = true;
 
 	/**
 	 * name/title of upgrade script
@@ -73,6 +73,16 @@ class upgrade_navigation extends upgradescript {
             $up->module = 'navigationController';
             $db->updateObject($up,'userpermission',null,'uid');
         }
+
+        // rename section table sef_name field to 2.0 standard of sef_url
+        $sects = $db->selectObjects('section',1);
+        foreach ($sects as $sect) {
+            if (empty($sect->sef_url) && !empty($sect->sef_name)) {
+                $sect->sef_url = $sect->sef_name;
+                $db->updateObject($sect,'section');
+            }
+        }
+        $db->sql('ALTER TABLE '.DB_TABLE_PREFIX.'_section DROP sef_name');
 
 		// convert each navigationmodule to a navigation Controller
 	    $modules_converted = 0;
